metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyAction__c/Calendly__CalendlyAction__c.object-meta.xml
<CustomObject>
    <label>CalendlyAction</label>
    <nameField>
        <label>CalendlyAction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CalendlyActions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>