metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__AdditionalGuests__c.field-meta.xml
<CustomField>
    <fullName>Calendly__AdditionalGuests__c</fullName>
    <description>Comma-separated field with emails from guests</description>
    <label>Additional Guests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>