metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__AdditionalHosts__c.field-meta.xml
<CustomField>
    <fullName>Calendly__AdditionalHosts__c</fullName>
    <description>Comma-separated field with emails from additional hosts</description>
    <label>Additional Hosts</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>