metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__CustomResponse1__c.field-meta.xml
<CustomField>
    <fullName>Calendly__CustomResponse1__c</fullName>
    <label>CustomResponse1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>