metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__EventCanceled__c.field-meta.xml
<CustomField>
    <fullName>Calendly__EventCanceled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Canceled</label>
    <type>Checkbox</type>
</CustomField>