metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__EventDescription__c.field-meta.xml
<CustomField>
    <fullName>Calendly__EventDescription__c</fullName>
    <label>Event Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>