metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__EventEndTime__c.field-meta.xml
<CustomField>
    <fullName>Calendly__EventEndTime__c</fullName>
    <label>Event End Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>