metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__FormSubmissionUUID__c.field-meta.xml
<CustomField>
    <fullName>Calendly__FormSubmissionUUID__c</fullName>
    <externalId>true</externalId>
    <label>FormSubmissionUUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>