metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__GroupName__c.field-meta.xml
<CustomField>
    <fullName>Calendly__GroupName__c</fullName>
    <description>The name of the user group to which the host belongs to</description>
    <label>Group Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>