metadata/sf-prod/force-app/main/default/objects/Calendly__CalendlyAction__c/fields/Calendly__Location__c.field-meta.xml
<CustomField>
    <fullName>Calendly__Location__c</fullName>
    <label>Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>